--- a/powerful-front/src/index.css
+++ b/powerful-front/src/index.css
@@ -1,5 +1,18 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
+
+.subListItemText {
+    padding-left: 1em;
+}
+
+div.listItem {
+    background: #FAFAFA;
+}
+
+.listItem span {
+    font-weight: bold;
+}
+
